# ct-dose-translation

./: README.md  SSIM_FT_DF_latent_ct_diffusion_model_1k_2k.ipynb  changes.md  df_data_augmentation.py  df_without_latent.py  df_without_latent_with_filters.py  pyproject.toml  test_adversarial_loss.py  test_bridge_diffusion.py  test_composite_loss.py  test_cross_attention.py  test_data_augmentations.py  test_edge_guidance.py  test_icr_head.py  test_runner.py
ct-dose-translation-last-version/: FT_DF_latent_ct_diffusion_model.ipynb  SD_VAE_latent_ct_diffusion_model.ipynb
